# projeto_goodwe

./: .editorconfig  .gitignore  Caddyfile  README.md  compose.yaml  justfile  webserver.Dockerfile
.github/workflows/: cd_broker.yaml
backend/: .dockerignore  Dockerfile  README.md  app.py  backend.Dockerfile  client.py  client_tuya.py  justfile  parser.py  requirements.txt  tomada.Dockerfile  tomada.py
backend/assistente-virtual/: auth_server.py
backend/modelo_IA/: IA_treinada.py
backend/modelo_IA/dados_Goodwe/: Plant Power_20250917055350.xls  Plant Power_20250917055505.xls  Plant Power_20250917055622.xls  Plant Power_20250917055647.xls  Plant Power_20250917055849.xls  Plant Power_20250917055909.xls  Plant Power_20250917060151.xls  Plant Power_20250917060210.xls  Plant Power_20250917060231.xls  Plant Power_20250917060303.xls
backend/testes_tuya/: client_tuya.py  test_tuya_connect.py
frontend/: .prettierrc  README.md  config.html  dados.html  eslint.config.js  index.html  package.json  painel.html  placas.html  pnpm-lock.yaml  styles.css
frontend/javascript/: painel.js  script.js
frontend/src/: Fallback.tsx  Home.tsx  Layout.tsx  index.css  main.tsx
frontend/src/components/: Badge.tsx  Battery.tsx  Button.tsx  Footer.tsx  Header.tsx  Membros.tsx  Palette.tsx
frontend/src/dados/: index.tsx
frontend/src/demo/: LoadChart.tsx  index.tsx
frontend/src/dispositivos/: Tomada.tsx  index.tsx
frontend/src/lib/: index.ts
frontend/src/sobre/: index.tsx
modelo_IA/: IA_treinada.py
tomada/: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
tomada/broker/: Cargo.toml
tomada/broker/src/: api.rs  broker.rs  cli.rs  lib.rs  main.rs
tomada/broker/src/broker/: proto.rs
tomada/common/: Cargo.toml  README.md
tomada/common/src/: lib.rs
tomada/embed/: Cargo.toml  README.md  build.rs
tomada/embed/.cargo/: config.toml
tomada/embed/src/: ble.rs  fmt.rs  lib.rs  status_led.rs  wifi.rs
