[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
postcard = { version = "1.1.3" }
serde = { version = "1.0.219", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = ["serde/std"]
no_std = ["dep:defmt"]
