[package]
edition      = "2024"
name         = "goodwe_plug"
version      = "0.1.0"

[lib]
name = "goodwe_plug"
path = "./src/lib.rs"
test = false
bench = false

[[bin]]
name = "goodwe_plug"
test = false
bench = false
path = "./src/bin/main.rs"

[dependencies]
common = { path = "../common", default-features = false }

defmt = { version = "1.0.1", optional = true }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "tcp",
  "udp",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "wifi",
] }
esp-wifi-sys = { version = "0.7.1", features = ["esp32c3"] }

bt-hci = { version = "0.3", optional = true }
trouble-host = { version = "0.2.0", features = ["gatt", "default-packet-pool-mtu-255"], optional = true }

embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

esp-alloc = { version = "0.8.0" }
esp-backtrace = { version = "0.17.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
], optional = true }
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }


embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0" }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2" }
static_cell = "2.1.1"
heapless = "0.9.1"

critical-section = "1.2.0"
portable_atomic_enum = "0.3.1"
portable-atomic = "1.11.1"

futures-core = { version = "0.3.31", default-features = false }
futures = { version = "0.3.31", default-features = false }

postcard = { version = "1.1.3" }
uuid = { version = "1.18.0", default-features = false }

dotenvy_macro = "0.15.7"

[patch.crates-io]
# trouble-host = { git = "https://github.com/embassy-rs/trouble.git" }
# esp-hal = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-println = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-radio" }

# ótimo fork, gosto muito
[patch.crates-io.dotenvy_macro]
git = "https://github.com/juliapixel/dotenvy.git"
branch = "feat/codegen_attrs"

[features]
default = ["security"]
defmt = [
    "dep:defmt",
    "dep:esp-backtrace",
    "common/defmt",
    "esp-hal/defmt",
    "embassy-net/defmt",
    "embedded-io/defmt-03",
    "embedded-io-async/defmt-03",
    "esp-alloc/defmt",
    "esp-backtrace/defmt",
    "esp-println/defmt-espflash",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "esp-hal-embassy/defmt",
    "esp-wifi/defmt",
    "esp-wifi-sys/defmt",
    "smoltcp/defmt",
    "trouble-host/defmt",
    "embassy-sync/defmt",
    "postcard/use-defmt",
]
security = ["trouble-host/security"]
ble = ["esp-wifi/ble", "esp-wifi/coex", "dep:bt-hci", "dep:trouble-host"]

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release.package.esp-wifi]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
